final version of landing page including the final version of quote's section, call to action's section and the footer

--- a/style.css
+++ b/style.css
@@ -1,15 +1,18 @@
+body{
+    margin: -5px;
+}
 nav{
     background-color: #1F2937;
+    height: 80px;
     display: flex;
     justify-content: space-around;
     align-items: center;
-
 }
 .left-list, .right-list{
     display: flex;
 }
 .right-list{
-    gap: 20px;
+    gap: 40px;
 }
 ul{
     list-style-type: none;
@@ -22,20 +25,28 @@ ul{
     font-size: 24px;
     color: #F9FAF8;
 }
-.hero{
+ .hero{
     background-color: #1F2937;
     height: 400px;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     padding: 35px;
+    gap: 120px;
+}
+.hero .card p{
+    margin-top: -35px;
 }
 .card, .image{
-   width: 400px; 
+   width: 450px; 
 }
 .image{
-    height: 300px;
+    height: 280px;
+    width: 600px;
     background-color:#6d747d;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .hero h1{
     font-size: 48px;
@@ -87,10 +98,9 @@ ul{
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    background-color: #E5E7EB;
+    background-color: #E5E7EB; 
     /* flex-direction: column; */
-
-}
+ }
 .quote p{
     width: 830px;
     font-size: 36px;
@@ -105,3 +115,40 @@ span{
     display: flex;
     flex-direction: column;
 }
+
+.call{
+    height: 400px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.callcard{
+    background-color: #3882F6;
+    width: 1400px;
+    border-radius: 8px;
+    color: white;
+    display: flex;
+    justify-content: space-around;
+    padding: 50px 0px; 
+} 
+
+.call .callcard button{
+    background-color: #3882F6;
+    padding: 9px 34px;
+    border-radius: 10px;
+    border: 2px solid white;
+    color: white;
+    align-self: center;
+    font-weight: bold;
+    font-size: 18px;
+}
+footer{
+    height: 120px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #1F2937;
+    color: white;
+    font-size: 20px;
+    font-weight: bold;
+}  
